# GTM_WAE

./: LICENSE  README.md  environment.yml  gtm_wae.yml  pyproject.toml
GTM_WAE/: config.py  layers.py  metrics.py  model.py  preprocessing.py  train.py
data/node_15/: node_15_df1_wo_duplicates.csv  node_15_df4_wo_duplicates.csv  node_15_df8_wo_duplicates.csv
notebooks/: 1_compute_kmers_alternative_data_extraction_species_mole_length_6_40_activity_threshols_10_and_15.ipynb
notebooks/encoding_and_sampling/: sample_from_gtm_annotated.ipynb
src/gtm_wae/: cawae.py  gtm.py  metrics.py  model.py  train.py
src/notebooks/encoding_and_sampling/: sample_from_gtm_annotated.ipynb
