[tool.poetry]
name = "gtm-wae"
version = "0.1.0"
description = "Official implementation of the custom WAE architecture guided by GTM"
authors = ["Laboratoire de chémoinformatique <karinapikalyova@gmail.com>, <tagirshin@gmail.com>, <2alexeyorlov@gmail.com>, <varnek@unistra.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
